Fix grid template syntax and adjust alignment in landing menu for improved layout

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -293,8 +293,8 @@ h2.sub-title {
   gap: 0px 0px;
   grid-auto-flow: row;
   grid-template-areas:
-    ‘restoration decorative
-    ‘artworks landing-image;
+    'restoration decorative'
+    'artworks landing-image';
   justify-items: center;
   align-items: start;
 }
@@ -302,7 +302,6 @@ h2.sub-title {
 .landing-menu div {
   width: 25vw;
   height: 24vh;
-  background-color: var(--ink-muted);
 }
 
 .img-home {
@@ -344,18 +343,21 @@ a.category {
     'black-and-white encaustic'
     'project-series drips-series';
   justify-items: center;
-  align-items: start;
+  align-items: center;
 }
 
 .black-and-white {
   grid-area: black-and-white;
 }
+
 .encaustic {
   grid-area: encaustic;
 }
+
 .project-series {
   grid-area: project-series;
 }
+
 .drips-series {
   grid-area: drips-series;
 }
